actualizacion de venta con un palo comando /qsmarket sellstick [jugador]